adição do pacote npm, minify e readme

--- a/example/example.html
+++ b/example/example.html
@@ -5,7 +5,7 @@
     <title>Dife: JavaScript Library</title>
   </head>
   <body>
-    <script src="../src/dife.js"></script>
+    <script src="../dist/dife.min.js"></script>
     <script src="example.js"></script>
   </body>
 </html>
